# 2022-mlops-fastapi

./: .env.example  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
fastapi/: database.py  main.py
fastapi/models/: bird_model.py  user_model.py
fastapi/routers/: bird_router.py  user_router.py
fastapi/schemas/: bird.py  user.py
fastapi_boilerplate/: __init__.py
tests/: __init__.py  test_fastapi_boilerplate.py
